--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,10 +7,8 @@ pool: "Linux"
   
 
 steps:
-- script: echo Hello, world!
-  displayName: 'Run a one-line script'
-
-- script: |
-    echo Add other tasks to build, test, and deploy your project.
-    echo See https://aka.ms/yaml
-  displayName: 'Run a multi-line script'
+- task: PublishBuildArtifacts@1
+  displayName: 'Publish Artifact'
+  inputs:
+    PathtoPublish: '$(System.DefaultWorkingDirectory/src-2/
+    ArtifactName: 'drop'
