--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,14 +1,41 @@
-# Starter pipeline
-# Start with a minimal pipeline that you can customize to build and deploy your code.
-# Add steps that build, run tests, deploy, and more:
-# https://aka.ms/yaml
 
-pool: "Containers"
-  
+trigger:
+- main
+pool:
+  name: Default
+  demands:
+    agent.name -equals myvm
 
 steps:
-- task: PublishBuildArtifacts@1
-  displayName: 'Publish Artifact'
+- task: TerraformInstaller@0
   inputs:
-    PathtoPublish: '$(System.DefaultWorkingDirectory)/src-2/'
-    ArtifactName: 'drop'
+    terraformVersion: '0.12.13'
+- task: TerraformTaskV3@3
+  displayName: terraform init
+  inputs:
+    provider: 'azurerm'
+    command: 'init'
+    backendServiceArm: 'Azure subscription 1(ac17dea1-2710-4a87-b16f-88ff9a3b5bec)'
+    backendAzureRmResourceGroupName: 'tamopstf'
+    backendAzureRmStorageAccountName: 'tamopstf10'
+    backendAzureRmContainerName: 'tfstatedevops'
+    backendAzureRmKey: 'terraform.tfstate'
+    
+- task: TerraformTaskV3@3
+  displayName: terraform validate
+  inputs:
+    provider: 'azurerm'
+    command: 'validate'
+- task: TerraformTaskV3@3
+  displayName: terraform plan
+  inputs:
+    provider: 'azurerm'
+    command: 'plan'
+    environmentServiceNameAzureRM: 'Azure-service-connection'
+- task: TerraformTaskV3@3
+  displayName: terraform apply
+  inputs:
+    provider: 'azurerm'
+    command: 'apply'
+    #commandOptions: 'tfplan -auto-approve'
+    environmentServiceNameAzureRM: 'Azure-service-connection'
